syntax = "proto3";

option csharp_namespace = "AdminServer";

package admin;

service Admin {
	rpc GetUsers(GetMessage) returns (MessageReply);
	rpc PostUser(UserDTO) returns (MessageReply);
	rpc DeleteUser(Id) returns (MessageReply);
}

message UserDTO {
	int32 id = 1;
	string Username = 2;
	string Password = 3;
}

message Id {
	string id = 1;
}

message MessageReply {
	string message = 1;
}

message GetMessage { }